# adventofcode-2021

./: Cargo.toml
day1/: day1.rs  day1_part2.rs
day16/: input.txt
day20/: input.txt
day24/: input.txt
src/: bingo.rs  derivative.rs  files.rs  geometry.rs  kruskal.rs  lib.rs  nums.rs  parser.rs  vents.rs
