[package]
name    = "aoc2021"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
nom = "6.0"
num = "0.4"
hex = "0.4"
itertools = "0.8.0"
disjoint-sets = "0.4.2"

# [[bin]]
# name = "day1"

# [[bin]]
# name = "day1_part2"

# [[bin]]
# name = "day2"

# [[bin]]
# name = "day3"

# [[bin]]
# name = "day4"

# [[bin]]
# name = "day5"

# [[bin]]
# name = "day6"

# [[bin]]
# name = "day7"

# [[bin]]
# name = "day8"

# [[bin]]
# name = "day9"

# [[bin]]
# name = "day10"

# [[bin]]
# name = "day11"

# [[bin]]
# name = "day12"

# [[bin]]
# name = "day13"

# [[bin]]
# name = "day14"

# [[bin]]
# name = "day15"

# [[bin]]
# name = "day16"

# [[bin]]
# name = "day16-bits"

# [[bin]]
# name = "day17"

# [[bin]]
# name = "day18"

# [[bin]]
# name = "day19"

# [[bin]]
# name = "day20"

# [[bin]]
# name = "day21"

# [[bin]]
# name = "day22"

# [[bin]]
# name = "day23"

[[bin]]
name = "day24"

[[bin]]
name = "day25"
